Bug 146875 - Writer: ToC Index updating hangs
Summary: Writer: ToC Index updating hangs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.3.1 rc
Hardware: All All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
: 146745 146946 149239 152363 (view as bug list)
Depends on:
Blocks: TableofContents-Indexes
  Show dependency treegraph
 
Reported: 2022-01-20 13:37 UTC by Wilfried Koch
Modified: 2023-05-15 14:31 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
tail of terminal output, bibisect-linux-64-7.1 (2.97 KB, text/plain)
2022-01-22 00:40 UTC, Terrence Enger
Details
sample document (318.19 KB, application/vnd.oasis.opendocument.text)
2022-01-27 15:14 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wilfried Koch 2022-01-20 13:37:23 UTC
Appears in other 7.x.x.x. versions too. Probaly in all 7s.
Does not appear in 6.x.x.x.
With Versions 7 in the context menu (right mouse click) the function "update directory" (singular) was changed to "update directories" (plural). Since then directory updating in a large document (90 MB, 470 pp) hangs. The document was created alternately with 6.x.x.x and 7.x.x.x.
Treating the directories in the same document with 6.x.x.x is still OK.

I know that the availability of the document ist essential for you in this case. There are two problems:
1. the size
2. it is the manuscript of a book not yet published.

How can we proceed?

Thank you for your work.
Comment 1 Timur 2022-01-21 10:10:13 UTC
You may replace all chars in the document with "x". 
As for size, you may try to split in half as long as it still crashes. 
Not sure what's the limit here, but try to upload then, or some file sharing.
Just please explain what "update directory" does, where's that function in the menu.
Comment 2 Wilfried Koch 2022-01-21 13:32:49 UTC
To deliver the requested Info:

1. Update Directories /Update Dirctory. I have no English Version available in the moment. Maybe its is auctualize directories or similar. In Geran it is Verzeichnisse aktualisieren (plural, 7.x.y.z) / Verzeichnis aktualisieren (singular, until 6.x.y.z). You find this in the context menu when right clicking over an directory (table of contents table of figures, of keywords etc. In 7.2.5.2. it is on the fourth position in the context menu.

2. Following your advice I will send you a dropbox link for the test data. you will get this answering your email.


Best regards

Wilfried
Comment 3 Wilfried Koch 2022-01-21 13:41:07 UTC
Dear Timur,

Thank you for the message. Some comments concerning the bug were made in Bugzilla. You will hopefully be able to get the test data using the following link:

https://www.dropbox.com/sh/h8g99k3mzys6r8w/AAAwCQrhF1jrkrQxxYDaKZFna?dl=0

I will leave it accessible until January 28.

Best regards.

Wilfried
Comment 4 Timur 2022-01-21 14:16:33 UTC
No repro 7.0. Repro 7.2 and 7.4+. also Linux. Seems regression in 7.1. 
To be checked if already reported.
Comment 5 Terrence Enger 2022-01-22 00:40:13 UTC
Created attachment 177696 [details]
tail of terminal output, bibisect-linux-64-7.1

Working on linux-debian in bibisect-linux-64-7.1 repository, I see
that the problem started ...

           commit    s-h       date
           --------  --------  -------------------
    good   14b8ab15  7d610d0b  2021-04-23 15:01:47
    bad    cdacc026  810f7e4e  2021-04-23 15:03:13

The start of the log for that commit is:

    commit 810f7e4e0b61ee7cb3a7d6a1b503782d7248a4b1
    Author: Michael Stahl <michael.stahl@allotropia.de>
    Date:   Tue Apr 13 20:13:51 2021 +0200

        sw: layout: if fly's anchor moves forward, move fly off SwPageFrame

I am removing keywords bibisectRquest and adding bibisected and
bisected.
Comment 6 Timur 2022-01-24 07:55:39 UTC
Hi Michael. Here is a regression that points to your commit, please see. 
This bugs is about ToC update hang, but hangs also on fast scroll by scrollbar down&up, seems from the same commit.
Comment 7 Timur 2022-01-24 08:08:01 UTC
*** Bug 146946 has been marked as a duplicate of this bug. ***
Comment 8 BogdanB 2022-01-26 07:28:15 UTC
Repro in
Version: 7.3.1.0.0+ / LibreOffice Community
Build ID: de15e8d4f2f2e5d10cb5d9203e51f3a28347db8d
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Repro in
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0c3b8792b712e939d2ad524d554f96616b4844be
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Timur 2022-01-26 07:34:15 UTC
Instead of large Dropbox file, better to use same text without images, small attachment 177766 [details]. Great idea from Xisco in bug 146955.
Comment 10 Wilfried Koch 2022-01-27 13:07:32 UTC Comment hidden (obsolete)
Comment 11 Telesto 2022-01-27 13:46:39 UTC
(In reply to Wilfried Koch from comment #10)
> This suggestion saves space and transmission time. But does it deliver at
> least similar test results? I am in Doubt a little bit.

I think you're right.. it does hang, but the stack in the profiler looks different. So might be yet another recent regression.. not seen in 7.0
Comment 12 Xisco Faulí 2022-01-27 15:14:15 UTC
Created attachment 177841 [details]
sample document
Comment 13 Gabor Kelemen (Collabora) 2022-02-10 09:47:03 UTC Comment hidden (obsolete)
Comment 14 Telesto 2022-05-23 07:49:37 UTC
*** Bug 149239 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2022-12-21 09:05:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/abef9ea8aa99561e6f84451acf387abde4ec14ab

tdf#146875 sw: move also at-frame flys off SwPageFrame

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Michael Stahl 2022-12-21 09:12:43 UTC
fixed on master
Comment 17 Commit Notification 2022-12-21 10:43:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7bfd8f83fb93e991b644c34da7d2fa439e8f319c

tdf#146875 sw: move also at-frame flys off SwPageFrame

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Thorsten Behrens (allotropia) 2022-12-30 14:29:40 UTC
Verified with sample doc.
Comment 19 Commit Notification 2023-02-02 09:49:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/88a5c26334f392fcddfc5a1e62c3a482fbf72fe6

tdf#146875 sw: move also at-frame flys off SwPageFrame

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 stragu 2023-02-06 16:01:41 UTC
*** Bug 152363 has been marked as a duplicate of this bug. ***
Comment 21 Gabor Kelemen (Collabora) 2023-05-15 14:31:57 UTC
*** Bug 146745 has been marked as a duplicate of this bug. ***