tdf#146875 sw: move also at-frame flys off SwPageFrame

The bugdoc contains an at-frame anchored fly on page 77, which is
anchored to an at-page anchored fly.

While layouting page 74, the fly is moved to page 77, and the content on
page 74 invalidated.

Unexpectedly, calling RegisterAtPage on a SwFlyLayFrame does absolutely
nothing, as it calls the base class SwFlyFrame, so the fly stays on page
74.

Thus, page 74 never actually becomes valid, and later pages are never
layouted.

(regression from commit eb85de8e6b61fb3fcb6c03ae0145f7fe5478bccf)

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144631
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit abef9ea8aa99561e6f84451acf387abde4ec14ab)

Change-Id: I4fcbed4daf83f9e554de5a877a40b2c2419c0f2f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144759
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>